--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "unipr_cai",
   "version": "0.1.0",
-  "homepage": "http://AndryGabry01.github.io/unipr_cai_tabebella_compiler",
+  "homepage": "https://andrygabry01.github.io/unipr_cai_tabebella_compiler/",
   "private": true,
   "dependencies": {
     "@react-pdf/renderer": "^3.1.9",
