--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^2.29.3",
     "file-saver": "^2.0.5",
+    "flowbite": "^1.6.5",
+    "flowbite-datepicker": "^1.2.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
